# scripts

./: CMakeLists.txt  README.md
src/: bright_ctrl  chromium-techfak  connectBluetoothHeadset.sh  dia2pdf.sh  goMPS  i3-get-window-criteria.sh  leo_search.rb  leo_search_rofi.sh  lockhibernate.sh  locksuspend.sh  mps  parmigianoMount.sh  passmenu  passotpmenu  remove_unicode.sh  restartnmapplet.sh  steam_runtime_free  toggle_keyboardlayout.sh  vmDebaian8  vmUbuntu14  vmUbuntu16  vmWin7  win7vm  xcf2png  xrandr_autodetect.sh  xrandr_autodetect_openbox.sh  xrandr_csra.sh  xrandr_mobile.sh  xrandr_office.sh  xrandr_office_dp.sh
